@@ -14,12 +14,14 @@ public class OrdenDeCompra {
     private LocalDateTime fecha;
     private Map<Integer, Item> items;
     private List<DTEstado> estados;
+    private List<Comentario> comentarios; 
 
     public OrdenDeCompra(int numero) {
         this.fecha = LocalDateTime.now();
         this.numero = numero;
         this.precioTotal = 0;
         this.items = new HashMap<>();
+        this.comentarios = new ArrayList<>(); 
         this.estados = new ArrayList<>();
         this.estados.add(new DTEstado("En preparación", "PREPARANDO PAQUETE"));
         
@@ -35,23 +37,36 @@ public class OrdenDeCompra {
         this.estados.add(new DTEstado("En preparación", "PREPARANDO PAQUETE"));
         
     }
+    
+    public List<Comentario> getComentarios() {
+        return comentarios;
+    }
+
+    public void agregarComentario(String comentarioTexto, Cliente autor) {
+        if (autor == null) {
+            throw new IllegalArgumentException("El autor no puede ser null");
+        }
+        Comentario nuevoComentario = new Comentario(numero, comentarioTexto, autor, fecha);
+        comentarios.add(nuevoComentario);
+    }
+
+
 
     // Métodos para gestionar los estados
-
     public String getEstado() {
-        return estados.getLast().getEstado(); // Devuelve el último estado
+        //return estados.getLast().getEstado(); // Devuelve el último estado
+        return estados.get(estados.size() - 1).getEstado(); // Accede al último estado por índice
+
     }
 
     public void setEstado(String nuevoEstado, String comentarios) {
         estados.add(new DTEstado(nuevoEstado, comentarios));
     }
    
-   
-
-    
     public List<DTEstado> getHistorialEstado() {
         return estados;
     }
+    
 
     // Getters y Setters:
     
@@ -108,4 +123,6 @@ public class OrdenDeCompra {
     public DTOrdenDeCompra crearDT() {
         return new DTOrdenDeCompra(numero, getItems(), getPrecioTotal(), getHistorialEstado());
     }
+
+
 }
